add 401 and fix open api yaml

--- a/paimon-open-api/rest-catalog-open-api.yaml
+++ b/paimon-open-api/rest-catalog-open-api.yaml
@@ -48,6 +48,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ConfigResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "500":
           description: Internal Server Error
   /v1/{prefix}/databases:
@@ -63,14 +69,12 @@ paths:
           schema:
             type: string
         - name: maxResults
-          in: path
-          required: false
+          in: query
           schema:
             type: integer
             format: int32
         - name: pageToken
-          in: path
-          required: false
+          in: query
           schema:
             type: string
       responses:
@@ -80,6 +84,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ListDatabasesResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "500":
           description: Internal Server Error
     post:
@@ -105,6 +115,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CreateDatabaseResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "409":
           description: Resource has exist
           content:
@@ -137,6 +153,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GetDatabaseResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -164,6 +186,12 @@ paths:
       responses:
         "200":
           description: Success, no content
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -201,6 +229,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AlterDatabaseResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -227,14 +261,12 @@ paths:
           schema:
             type: string
         - name: maxResults
-          in: path
-          required: false
+          in: query
           schema:
             type: integer
             format: int32
         - name: pageToken
-          in: path
-          required: false
+          in: query
           schema:
             type: string
       responses:
@@ -244,6 +276,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ListTablesResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "500":
           description: Internal Server Error
     post:
@@ -270,6 +308,12 @@ paths:
       responses:
         "200":
           description: Success, no content
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "500":
           description: Internal Server Error
   /v1/{prefix}/databases/{database}/table-details:
@@ -290,14 +334,12 @@ paths:
           schema:
             type: string
         - name: maxResults
-          in: path
-          required: false
+          in: query
           schema:
             type: integer
             format: int32
         - name: pageToken
-          in: path
-          required: false
+          in: query
           schema:
             type: string
       responses:
@@ -307,6 +349,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ListTableDetailsResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "500":
           description: Internal Server Error
   /v1/{prefix}/databases/{database}/tables/{table}:
@@ -338,6 +386,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GetTableResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -381,6 +435,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "409":
           description: Resource has exist
           content:
@@ -419,6 +479,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "500":
           description: Internal Server Error
   /v1/{prefix}/tables/rename:
@@ -433,11 +499,6 @@ paths:
           required: true
           schema:
             type: string
-        - name: database
-          in: path
-          required: true
-          schema:
-            type: string
       requestBody:
         content:
           application/json:
@@ -446,6 +507,12 @@ paths:
       responses:
         "200":
           description: Success, no content
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -494,6 +561,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CommitTableResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -581,6 +654,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GetTableDataTokenResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -618,6 +697,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GetTableSnapshotResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -649,14 +734,12 @@ paths:
           schema:
             type: string
         - name: maxResults
-          in: path
-          required: false
+          in: query
           schema:
             type: integer
             format: int32
         - name: pageToken
-          in: path
-          required: false
+          in: query
           schema:
             type: string
       responses:
@@ -666,6 +749,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ListPartitionsResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -704,6 +793,12 @@ paths:
       responses:
         "200":
           description: Success, no content
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -741,6 +836,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ListBranchesResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -778,6 +879,12 @@ paths:
       responses:
         "200":
           description: Success, no content
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -816,6 +923,12 @@ paths:
       responses:
         "200":
           description: Success, no content
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -859,6 +972,12 @@ paths:
       responses:
         "200":
           description: Success, no content
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -891,14 +1010,12 @@ paths:
           schema:
             type: string
         - name: maxResults
-          in: path
-          required: false
+          in: query
           schema:
             type: integer
             format: int32
         - name: pageToken
-          in: path
-          required: false
+          in: query
           schema:
             type: string
       responses:
@@ -908,6 +1025,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ListViewsResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "500":
           description: Internal Server Error
     post:
@@ -934,6 +1057,12 @@ paths:
       responses:
         "200":
           description: Success, no content
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -960,14 +1089,12 @@ paths:
           schema:
             type: string
         - name: maxResults
-          in: path
-          required: false
+          in: query
           schema:
             type: integer
             format: int32
         - name: pageToken
-          in: path
-          required: false
+          in: query
           schema:
             type: string
       responses:
@@ -977,6 +1104,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ListViewDetailsResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "500":
           description: Internal Server Error
   /v1/{prefix}/databases/{database}/views/{view}:
@@ -1008,6 +1141,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GetViewResponse'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -1040,6 +1179,12 @@ paths:
       responses:
         "200":
           description: Success, no content
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -1068,6 +1213,12 @@ paths:
       responses:
         "200":
           description: Success, no content
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         "404":
           description: Resource not found
           content:
@@ -1424,9 +1575,7 @@ components:
       type: object
       properties:
         instant:
-          type: object
-          items:
-            $ref: '#/components/schemas/Instant'
+          $ref: '#/components/schemas/Instant'
     Instant:
       anyOf:
         - $ref: '#/components/schemas/SnapshotInstant'
@@ -1640,8 +1789,8 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Partition'
-          nextPageToken:
-            type: string
+        nextPageToken:
+          type: string
     CreateBranchRequest:
       type: object
       properties:
@@ -1688,8 +1837,8 @@ components:
           type: array
           items:
             type: string
-          nextPageToken:
-            type: string
+        nextPageToken:
+          type: string
     ListViewDetailsResponse:
       type: object
       properties:
