[rest] Add path and other options to Table Options

--- a/paimon-open-api/rest-catalog-open-api.yaml
+++ b/paimon-open-api/rest-catalog-open-api.yaml
@@ -1638,6 +1638,8 @@ components:
           type: string
         name:
           type: string
+        path:
+          type: string
         isExternal:
           type: boolean
         schemaId:
@@ -1964,6 +1966,8 @@ components:
         id:
           type: string
         name:
+          type: string
+        location:
           type: string
         options:
           type: object
