--- a/paimon-open-api/rest-catalog-open-api.yaml
+++ b/paimon-open-api/rest-catalog-open-api.yaml
@@ -1590,8 +1590,10 @@ components:
     AlterViewRequest:
       type: object
       properties:
-        change:
-          $ref: '#/components/schemas/ViewChange'
+        changes:
+          type: array
+          items:
+            $ref: '#/components/schemas/ViewChange'
     ViewChange:
       anyOf:
         - $ref: '#/components/schemas/SetViewOption'
